[BUGFIX] Correct width for wide icons preventing cutting off parts

--- a/Resources/Public/Scss/components/_sociallink.scss
+++ b/Resources/Public/Scss/components/_sociallink.scss
@@ -26,7 +26,7 @@
     font-size: 1.25rem;
     text-align: center;
     opacity: .8;
-    width: 1.25rem;
+    width: 1.75rem;
     height: 1.25rem;
     flex-shrink: 0;
     justify-content: center;
